# OpenGL_Renderer

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build_run_debug.sh  build_run_release.sh  imgui.ini  tasks.py  win_build_run_debug.bat  win_build_run_release.bat
dep/: mkdirs.cmake.in
dep/glad/: glad.c  glad.h
dep/glfw/: README.md
dep/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3_loader.h
dep/imgui/misc/freetype/: README.md
resources/models/Tree1/: Tree1.mtl
resources/shaders/: blinnPhong.frag  blinnPhong.frag.glsl  blinnPhong.vert  contrast.frag  contrast.vert  default.frag  default.frag.glsl  default.vert  default.vert.glsl  light.frag  light.vert  quad.frag  quad.vert  quad.vert.glsl  screen1.frag  shiny.frag  shiny.vert  singleColor.vert  singleColorStencil.frag  skybox.frag  skybox.vert
resources/shaders/instancing/: instanced.frag.glsl  instanced.vert.glsl  instancedDefault.frag.glsl  instancedDefault.vert.glsl  instancedTest.frag.glsl  instancedTest.vert.glsl
resources/shaders/postprocessing/: celShade.frag.glsl  colorChannel.frag  grayscale.frag  invert.frag.glsl  invert.vert
src/: Application.cpp  Application.hpp  Common.hpp  Window.cpp  Window.hpp  glad.c  main.cpp
src/camera/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  FPSCamera.cpp  FPSCamera.hpp  OrbitCamera.cpp  OrbitCamera.hpp
src/core/: HashedString.hpp  Input.cpp  Input.hpp  Logger.hpp  Utils.cpp  Utils.hpp
src/gl/: ElementBuffer.cpp  ElementBuffer.hpp  FBOContainer.cpp  FBOContainer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  RenderBuffer.cpp  RenderBuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Types.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/group/: Group.cpp  Group.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp
src/imgui/: ImGuiMenu.cpp  ImGuiMenu.hpp  ImguiStyles.h
src/renderer/: Application.cpp  Application.hpp  Common.hpp  DefaultVertex.hpp  FrameBufferRenderer.cpp  FrameBufferRenderer.hpp  FrameCapturer.cpp  FrameCapturer.hpp  Input.cpp  Input.hpp  InstancedGroup.cpp  InstancedGroup.hpp  InstancedModelRenderer.cpp  InstancedModelRenderer.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  ModelLoader.cpp  ModelLoader.hpp  ModelManager.cpp  ModelManager.hpp  PostProcessingEffect.cpp  PostProcessingEffect.hpp  PostProcessor.cpp  PostProcessor.hpp  Quad.cpp  Quad.hpp  Renderer.cpp  Renderer.hpp  Skybox.cpp  Skybox.hpp  Transform.cpp  Transform.hpp  Window.cpp  Window.hpp
src/renderer/camera/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  FPSCamera.cpp  FPSCamera.hpp  OrbitCamera.cpp  OrbitCamera.hpp
src/renderer/gl/: ElementBuffer.cpp  ElementBuffer.hpp  FBOContainer.cpp  FBOContainer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  RenderBuffer.cpp  RenderBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Triangle.hpp  Types.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/renderer/gl/stb_image/: stb_image_impl.hpp
src/renderer/group/: Group.cpp  Group.hpp  Model.cpp  Model.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp
src/renderer/resource/: MaterialManager.cpp  MeshManager.cpp  MeshManager.hpp  ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp
src/renderer/shader/: Shader.cpp  Shader.hpp
src/renderer/shapes/: Cube.hpp  Quad.hpp
src/resource/: MaterialManager.cpp  MaterialManager.hpp  MeshManager.cpp  MeshManager.hpp  ModelManager.cpp  ModelManager.hpp  ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp
src/scenes/: InstancingScene.cpp  InstancingScene.hpp  LightingOneScene.cpp  LightingOneScene.hpp  ModelViewerScene.cpp  ModelViewerScene.hpp  PlaygroundScene.cpp  PlaygroundScene.hpp  SceneManager.cpp  SceneManager.hpp
src/shapes/: Cube.hpp
src/utils/: HashedString.hpp  Input.cpp  Input.hpp  Logger.hpp  Utils.cpp  Utils.hpp
